Now actually have the alignment fixed.

--- a/ngMIDIator/ng2-cli-angular2-mdl/src/styles.css
+++ b/ngMIDIator/ng2-cli-angular2-mdl/src/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .cell-content {
-	/*width: 90%;*/
+	width: 90%;
 }
 
 .mdl-card__supporting-text {
